# CSC8501Coursework

./: .gitignore  CMakeLists.txt  FastestSorter.cpp  PointersAndReferences.cpp  arrays.cpp  interaction_and_recursion.cpp  main.cpp  memoryAllocation.cpp  passing_parameters.cpp
ConwaysGameOfLife/: 20241011-01  20241014-02  20241015  20241015-151142-pattern-glider-3.txt  20241015-153453-pattern-lwss-8.txt  20241015-162955-pattern-lwss-59.txt  20241016-030753-pattern-beehive-64.txt  20241017-175353-pattern-block-1.txt  20241017-175725-pattern-block-1.txt  20241017-180422-pattern-beehive-2.txt  20241017-180800-pattern-beehive-2.txt  20241017-181753-pattern-blinker-1.txt  20241017-182400-pattern-toad-4.txt  20241017-183012-pattern-glider-1.txt  20241017-201445-pattern-lwss-6.txt  20241017-202031-pattern-lwss-13.txt  20241017-202901-pattern-lwss-4.txt  20241017-203301-pattern-lwss-1.txt  20241018-022931-pattern-lwss-8.txt  20241018-024323-pattern-glider-7.txt  GridBase.h  gameoflife  grid.cpp  grid.h  grid.tpp  main.bak  main.cpp  mian.cpp  pattern-beehive  pattern-blinker  pattern-block  pattern-glider  pattern-lwss  pattern-toad  patterns.txt
